--- a/style.css
+++ b/style.css
@@ -95,3 +95,40 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+.todos {
+  display: inline-block;
+  margin: 0 auto;
+}
+
+#todo-list {
+  border: 1px solid black;
+  padding: 2rem 1rem;
+  border-radius: 12px;
+  margin: 0 auto;
+  background-color: rgba(255, 255, 255, 0.1)
+}
+
+#todo-list .todo { 
+  display: block;
+}
+
+.todo-input {
+  border: 1px solid black;
+  padding: 2rem 1rem;
+  margin-bottom: 1.5rem;
+  border-radius: 12px;
+  margin: 0 auto;
+  background-color: rgba(255, 255, 255, 0.1)
+}
+
+.todo-input input {
+  border-radius: 8px;
+  border-radius: 8px;
+  border: 1px solid transparent;
+  padding: 0.6em 1.2em;
+  font-size: 1em;
+  font-weight: 500;
+  margin-right: 1rem;
+  background-color: gray;
+}
